# ejercicios-practica-2-corte-2

./: CMakeLists.txt  README.md  design_spreadsheet.cpp  design_twitter.cpp  queen-attack.cpp  robot-simulator.cpp
